--- a/app/src/main/res/layout/activity_details_pays.xml
+++ b/app/src/main/res/layout/activity_details_pays.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SelectedPaysActivity">
+    tools:context=".activity.DetailsPaysActivity">
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -27,7 +27,6 @@
 
 
                 <TextView
-                    android:id="@+id/editTextId2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
@@ -36,7 +35,6 @@
                     android:padding="10dp" />
 
                 <TextView
-                    android:id="@+id/editTextContinent2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
@@ -46,7 +44,6 @@
                     android:padding="10dp" />
 
                 <TextView
-                    android:id="@+id/editTextNom2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
@@ -56,7 +53,6 @@
                     android:padding="10dp" />
 
                 <TextView
-                    android:id="@+id/editTextNombreHabitants2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
@@ -66,7 +62,6 @@
                     android:padding="10dp" />
 
                 <TextView
-                    android:id="@+id/editTextSuperficie2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
@@ -83,7 +78,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/editTextId"
+                    android:id="@+id/textVId"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
@@ -92,7 +87,7 @@
                     android:padding="10dp" />
 
                 <TextView
-                    android:id="@+id/editTextContinent"
+                    android:id="@+id/textVContinent"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
@@ -102,7 +97,7 @@
                     android:padding="10dp" />
 
                 <TextView
-                    android:id="@+id/editTextNom"
+                    android:id="@+id/textVNom"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
@@ -112,7 +107,7 @@
                     android:padding="10dp" />
 
                 <TextView
-                    android:id="@+id/editTextNombreHabitants"
+                    android:id="@+id/textVNombreHabitants"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
@@ -122,7 +117,7 @@
                     android:padding="10dp" />
 
                 <TextView
-                    android:id="@+id/editTextSuperficie"
+                    android:id="@+id/textVSuperficie"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
