--- a/app/src/main/res/layout/activity_edit_pays.xml
+++ b/app/src/main/res/layout/activity_edit_pays.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EditPaysActivity">
+    tools:context=".activity.EditPaysActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -80,7 +80,7 @@
                 android:orientation="vertical">
 
                 <EditText
-                    android:id="@+id/editTextId"
+                    android:id="@+id/textVId"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
@@ -89,7 +89,7 @@
                     android:padding="10dp" />
 
                 <EditText
-                    android:id="@+id/editTextContinent"
+                    android:id="@+id/textVContinent"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
@@ -99,7 +99,7 @@
                     android:padding="10dp" />
 
                 <EditText
-                    android:id="@+id/editTextNom"
+                    android:id="@+id/textVNom"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
@@ -109,7 +109,7 @@
                     android:padding="10dp" />
 
                 <EditText
-                    android:id="@+id/editTextNombreHabitants"
+                    android:id="@+id/textVNombreHabitants"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
@@ -119,7 +119,7 @@
                     android:padding="10dp" />
 
                 <EditText
-                    android:id="@+id/editTextSuperficie"
+                    android:id="@+id/textVSuperficie"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
