--- a/app/src/main/res/layout/activity_details_pays.xml
+++ b/app/src/main/res/layout/activity_details_pays.xml
@@ -78,7 +78,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textVId"
+                    android:id="@+id/editTextId"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
@@ -87,7 +87,7 @@
                     android:padding="10dp" />
 
                 <TextView
-                    android:id="@+id/textVContinent"
+                    android:id="@+id/editTextContinent"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
@@ -97,7 +97,7 @@
                     android:padding="10dp" />
 
                 <TextView
-                    android:id="@+id/textVNom"
+                    android:id="@+id/editTextNom"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
@@ -107,7 +107,7 @@
                     android:padding="10dp" />
 
                 <TextView
-                    android:id="@+id/textVNombreHabitants"
+                    android:id="@+id/editTextNombreHabitants"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
@@ -117,7 +117,7 @@
                     android:padding="10dp" />
 
                 <TextView
-                    android:id="@+id/textVSuperficie"
+                    android:id="@+id/editTextSuperficie"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
