--- a/app/src/main/res/layout/activity_edit_pays.xml
+++ b/app/src/main/res/layout/activity_edit_pays.xml
@@ -24,7 +24,6 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/editTextId3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
@@ -33,7 +32,6 @@
                     android:padding="10dp" />
 
                 <TextView
-                    android:id="@+id/editTextContinent3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
@@ -43,7 +41,6 @@
                     android:padding="10dp" />
 
                 <TextView
-                    android:id="@+id/editTextNom3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
@@ -53,7 +50,6 @@
                     android:padding="10dp" />
 
                 <TextView
-                    android:id="@+id/editTextNombreHabitants3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
@@ -63,7 +59,6 @@
                     android:padding="10dp" />
 
                 <TextView
-                    android:id="@+id/editTextSuperficie3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
@@ -80,7 +75,7 @@
                 android:orientation="vertical">
 
                 <EditText
-                    android:id="@+id/textVId"
+                    android:id="@+id/editTextId"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
@@ -89,7 +84,7 @@
                     android:padding="10dp" />
 
                 <EditText
-                    android:id="@+id/textVContinent"
+                    android:id="@+id/editTextContinent"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
@@ -99,7 +94,7 @@
                     android:padding="10dp" />
 
                 <EditText
-                    android:id="@+id/textVNom"
+                    android:id="@+id/editTextNom"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
@@ -109,7 +104,7 @@
                     android:padding="10dp" />
 
                 <EditText
-                    android:id="@+id/textVNombreHabitants"
+                    android:id="@+id/editTextNombreHabitants"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
@@ -119,7 +114,7 @@
                     android:padding="10dp" />
 
                 <EditText
-                    android:id="@+id/textVSuperficie"
+                    android:id="@+id/editTextSuperficie"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
