--- a/app/src/main/res/layout/activity_edit_pays.xml
+++ b/app/src/main/res/layout/activity_edit_pays.xml
@@ -131,6 +131,7 @@
             android:id="@+id/selectedButtonEnregistrer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="enregisterPays"
             android:text="Enregistrer" />
 
 
